# shorty-rust

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/2024-12-25-142212_shorty_urls/: up.sql
shorty/: .env  Cargo.toml  diesel.toml
shorty-ui/: .env  Cargo.toml  Trunk.toml  index.html  style.css
shorty-ui/src/: lib.rs  utils.rs
shorty-ui/src/components/: app.rs  mod.rs  url_shortner.rs
shorty-ui/src/components/url_shortner/: api.rs  state.rs
shorty/migrations/2024-12-25-142212_shorty_urls/: down.sql
shorty/src/: cache.rs  counter.rs  db.rs  handlers.rs  main.rs  schema.rs  url_service.rs
src/: counter.rs  db.rs  handlers.rs  main.rs  models.rs  token.rs
