[package]
name = "shorty"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
diesel-async = { version = "0.5.2", features = ["bb8", "postgres"] }
diesel = { version = "2.2.6", features = ["chrono"] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19" }
volga = { version = "0.4.9", features = ["di", "tracing"] }

[[bin]]
name = "shorty"
path = "src/main.rs"
