[package]
name = "shorty"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
dotenvy = "0.15.7"
diesel-async = { version = "0.5.2", features = ["bb8", "postgres"] }
diesel = { version = "2.2.7", features = ["chrono"] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
volga = { version = "0.5.1", features = ["di", "tracing", "problem-details"] }

[[bin]]
name = "shorty"
path = "src/main.rs"
