[package]
name = "shorty-ui"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
leptos = { version = "0.8.6", features = ["csr"] }
reqwest = { version = "0.12.23", features = ["json"] }
wasm-bindgen = "0.2.100"
log = "0.4.27"
console_log = "1"
web-sys = { version = "0.3.77", features = ["Window", "Navigator", "Clipboard"] }