[package]
name = "shorty-ui"
version = "0.1.1"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
leptos = { version = "0.8.12", features = ["csr"] }
reqwest = { version = "0.12.24", features = ["json"] }
wasm-bindgen = "0.2.105"
log = "0.4.28"
console_log = "1"
web-sys = { version = "0.3.82", features = ["Window", "Navigator", "Clipboard"] }