[package]
name = "shorty"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
dotenvy = "0.15.7"
diesel-async = { version = "0.6.1", features = ["bb8", "postgres"] }
diesel = { version = "2.2.12", features = ["chrono"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
volga = { version = "0.6.3", features = ["di-full", "tracing", "problem-details"] }

[[bin]]
name = "shorty"
path = "src/main.rs"
