[package]
name = "shorty"
version = "0.1.1"
edition = "2024"

[dependencies]
chrono = "0.4.42"
dotenvy = "0.15.7"
diesel-async = { version = "0.7.4", features = ["bb8", "postgres"] }
diesel = { version = "2.3.3", features = ["chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-valkey = "0.0.0-alpha2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
volga = { version = "0.7.1", features = ["di", "tracing", "problem-details"] }

[[bin]]
name = "shorty"
path = "src/main.rs"
